<resources>
    <string name="app_name">PathFinder</string>
    <string name="AppTitle">PathFinder</string>
    <string name="email">E-Mail Address</string>
    <string name="password">Password</string>
    <string name="AuthenticatingText">Authenticating…</string>
    <string name="auth_failed">Login Failed</string>
    <string name="email_error">Enter a valid email address</string>
    <string name="password_error">Between 8 and 12 alphanumeric characters</string>
    <string name="action_logout">Log Out</string>
    <string name="last_name">Last Name</string>
    <string name="name">Name</string>
    <string name="registration">Registration</string>
    <string name="register">Register</string>
    <string name="password_again">Password Again</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register_link">Not have an account? Register now.</string>
    <string name="no_name_enter_error">Please enter your name.</string>
    <string name="no_lastname_enter_error">Please enter your last name</string>
    <string name="confirm_password_error">Your password do not match.</string>
    <string name="something_went_wrong">Something went wrong.</string>
    <string name="registering">Registering…</string>
    <string name="email_already_used">Your e-mail is already used.</string>
    <string name="connection_error">Can\'t connect to the server.</string>
    <string name="search_hint">Search</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="main_menu_title">Welcome to PathFinder</string>
    <string name="main_menu_subtitle">Login or Register to get started</string>
    <string name="login_title">Welcome Back!</string>
    <string name="login_subtitle">Login with your email to get started</string>
    <string name="register_title">Create an account</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="home">Home</string>
    <string name="job_portal">Jobs Portal</string>
    <string name="profile">Profile</string>
    <string name="fav">Favorites</string>
    <string name="notifications">Notifications</string>
    <string name="profile_picture">Profile Picture</string>

    <string name="action_add_favourite">Add to Favourites</string>
    <string name="action_play_next">Play Next</string>
    <string name="backdrop_title">LOVE MUSIC</string>
    <string name="backdrop_subtitle">This season top 20 albums</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="no_user_found">No User Found.</string>
    <string name="title_activity_maps">Map</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="relative_position_text">Your relative is here.</string>
    <string name="your_position_text">You\'re here.</string>
    <string name="what_on_your_mind">What on your mind?</string>
    <string name="post_btn">Post</string>
    <string name="decades">decades</string>
    <string name="years">years</string>
    <string name="months">months</string>
    <string name="weeks">weeks</string>
    <string name="days">days</string>
    <string name="hours">hrs</string>
    <string name="minutes">mins</string>
    <string name="seconds">secs</string>
    <string name="ago"> ago</string>
    <string name="loved_your_post">loved your post.</string>
    <string name="comment_post">commented on your post.</string>
    <string name="loved_comment">loved your comment.</string>
    <string name="tagged_post">tagged you on post.</string>
    <string name="tagged_comment">tagged you on comment.</string>
    <string name="feed_posted">posted on your feed.</string>
    <string name="noti_callhelp">need your help now.</string>
    <string name="family_locations">Family Locations</string>
    <string name="timeline">Timeline</string>
    <string name="add_friend">Add Friend</string>
    <string name="sos">SOS</string>
    <string name="about_me">About Me</string>
    <string name="gender">Gender</string>
    <string name="birthdate">Birthdate</string>
    <string name="telephone">Telephone</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="line">Line</string>
    <string name="otherlink">Other</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="creating_new_post">Creating new post…</string>
    <string name="volunteer_service">Volunteers</string>
    <string name="employer_logo">Employer Logo</string>
    <string name="emp_detail_title">Employer Details</string>
    <string name="about_us">About Us</string>
    <string name="address">Address</string>
    <string name="category">Category</string>
    <string name="email_short">E-Mail</string>
    <string name="responsibility">Responsibility</string>
    <string name="multirates">Multirates</string>
    <string name="apply">Apply</string>
    <string name="save">Save</string>
    <string name="salary_unit">THB</string>
    <string name="title">Title :</string>
    <string name="to">To :</string>
    <string name="from">From :</string>
    <string name="messages_optional">Messages (Optional)</string>
    <string name="messages_title">Messages</string>
    <string name="google_location_service_request_title">Use Google\'s Location Services?</string>
    <string name="google_location_service_request_body">Let Google help apps determine location. This means sending anonymous location data to Google, even when no apps are running.</string>
    <string name="agree">Agree</string>
    <string name="disagree">Disagree</string>
    <string name="progress_dialog_title">Please Wait…</string>
    <string name="requesting_a_volunteer">Requesting a volunteer…</string>
    <string name="sending_application">Sending application…</string>
    <string name="cant_apply_job">Can\'t apply for the job. Please try again later.</string>
    <string name="sent">SENT</string>
    <string name="successful_apply_job">Application has been sent.</string>
    <string name="middle_dot">•</string>
    <string name="comment_btn">Comment</string>
    <string name="comment_hint">Comment your thought…</string>
    <string name="just_now">Just now</string>
    <string name="horizontal_devider">|</string>
    <string name="edu_1">High School Certificate</string>
    <string name="edu_2">Diploma of High Vocational Education</string>
    <string name="edu_3">Bachelor Degree</string>
    <string name="edu_4">Master Degree</string>
    <string name="edu_5">Doctorate Degree</string>
    <string name="requeset_sent">Request Sent</string>
    <string name="accept_request">Accept Request</string>
    <string name="friend">Friend</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="noti_friend_add">want to add your as friend.</string>
    <string name="noti_friend_accept">accepted your friend request</string>
    <string name="noti_relative_add">want to add your as relative.</string>
    <string name="noti_relative_accept">accepted your relative request</string>
    <string name="jobs_centre">Jobs Centre</string>
    <string name="employers_centre">Employers Centre</string>
    <string name="favorite_jobs">Favorite Jobs</string>
    <string name="loading">Loading…</string>
    <string name="cancel_order_dialog_content">Are you sure you want to cancel this order?</string>
    <string name="cancel_order_dialog_title">Cancel This Order</string>
    <string name="no_btn">NO</string>
    <string name="yes_btn">YES</string>
    <string name="job_done_dialog_title">Thanks for using the app!</string>
    <string name="job_done_dialog_content">Your request has been done. Thanks you for useing the app!</string>
    <string name="order_cancelled_title">Sorry! The order has been cancelled.</string>
    <string name="order_cancelled_content">The order has been cancelled.</string>
    <string name="login">Log in</string>
    <string name="call_volunteer">CALL VOLUNTEER</string>
    <string name="featured_employers">Featured Employers</string>
    <string name="featured_jobs">Featured Jobs</string>
    <string name="jobs">Jobs</string>
    <string name="users">Users</string>
    <string name="employers">Employers</string>
    <string name="educations">Educations</string>
    <string name="experiences">Experiences</string>
    <string name="details">Details</string>
    <string name="search_title">Search</string>
    <string name="create_profile_title">Create Profile</string>
    <string name="disability">Disability</string>
    <string name="completing">Completing...</string>
</resources>
